src/components/RecordWrapper/RecordWrapper.module.css
.title,
.title > h2 {
  color: var(--tab-text-active-color) !important;
  max-width: 100%;
}

.abandonedTitle {
  composes: title;
}

.abandonedTitle,
.abandonedTitle > h2 {
  color: var(--color-gray) !important;
}

.darkAbandonedTitle,
.darkAbandonedTitle > h2 {
  color: var(--tab-count-background) !important;
  max-width: 100%;
}

.header {
  display: flex;
  flex-direction: column;
}

.subtitleWrapper {
  max-width: calc(100% - 15rem);
  flex-wrap: wrap;
}

.eventTooltip {
  color: var(--text-secondary-color) !important;
}

.status {
  position: absolute;
  right: 4rem;
  top: 2rem;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  flex: 1;
}

.editButton {
  margin-top: 0.7rem;
  margin-left: 1rem;
}

.titleWrapper {
  display: flex;
}

.rfpLink {
  font-size: var(--font-size-small);
}

.darkProposedFor {
  color: var(--text-color);
}

.proposedFor {
  color: var(--color-gray);
}

.titleEditWrapper {
  max-width: calc(100% - 28rem);
  display: flex;
  align-items: center;
}

.rfpTitleWrapper {
  max-width: calc(100% - 32rem);
}

.mobileRfpTag {
  height: 2.5rem;
  width: 4rem;
}

.commentsLink {
  display: flex;
  align-items: center;
}

.commentsLink > span {
  color: var(--color-primary-dark);
  font-weight: var(--font-weight-semi-bold);
  margin-right: 0.2rem;
}

.commentsLink > span.commentsNumber {
  margin-right: 0.5rem;
}

.commentsLink > span.darkCommentsNumber {
  color: var(--tab-text-active-color);
}

div.seeOnGithubTooltip {
  white-space: nowrap;
  font-size: var(--font-size-small);
  margin-right: 1.2rem;
  margin-left: 1.2rem;
  color: var(--color-gray);
}

div.darkSeeOnGithubTooltip {
  color: var(--text-color);
}

.recordToken {
  display: flex;
  align-items: center;
  max-width: 100%;
}

@media screen and (max-width: 560px) {
  .status:not(.disableMobileView) {
    position: initial;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
  }

  .titleWrapper {
    flex-direction: column-reverse;
  }

  .titleEditWrapper {
    flex-wrap: wrap;
    max-width: 100%;
    margin-top: 1rem;
  }

  .titleStatusWrapper {
    display: flex;
    justify-content: flex-end;
  }

  .title {
    max-width: 100%;
  }
}

